--- a/MTYD/ViewModel/UserProfile.xaml
+++ b/MTYD/ViewModel/UserProfile.xaml
@@ -194,6 +194,7 @@
                         Text="CHECKOUT" TextColor="White"  FontAttributes="Bold" FontSize="20"
                         WidthRequest="180" HeightRequest="50" />
         <Button Text="Log Out" Clicked="LogOutClick"></Button>
+        <Button Text="User Profile Testing" Clicked="UserProfTestClick"></Button>
     </StackLayout>
 </ScrollView>
 
