--- a/MTYD/ViewModel/Select.xaml
+++ b/MTYD/ViewModel/Select.xaml
@@ -1,9 +1,49 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MTYD.ViewModel.Select" Title="Meal Schedule" BackgroundColor ="#f3f2dc">
     <ContentPage.Content>
+        <ScrollView>
         <StackLayout>
             <StackLayout x:Name="mainStack">
-                <Picker x:Name="SubscriptionPicker" Margin="30,0,30,0" SelectedIndexChanged="planChange" Title="Choose a Meal Plan"></Picker>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    
+                    <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" HorizontalOptions="Fill"/>
+                    <Label x:Name="heading" Text="MENU THIS WEEK" FontAttributes="Bold" VerticalOptions="End" HorizontalTextAlignment="Center" TextColor="Black"/>
+                    <ImageButton x:Name="pfp" BackgroundColor="LightGray" VerticalOptions="End" HorizontalOptions="End" Clicked="clickedPfp"/>
+                    <ImageButton x:Name="menu" Source="menu2.png" VerticalOptions="End" HorizontalOptions="Start" BackgroundColor="Transparent" Clicked="clickedMenu"/>
+
+                </Grid>
+
+                <Frame x:Name="selectPlanFrame" BorderColor="#FF6505" CornerRadius="23" HasShadow="False">
+                    <Frame BorderColor="White" BackgroundColor="Transparent" Padding="0" HasShadow="False">
+                    <Grid>
+
+                      <Picker x:Name="SubscriptionPicker" SelectedIndexChanged="dateChange" Title="SELECT MEAL PLAN" Margin="0"
+                              HorizontalOptions="Fill" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Black" TitleColor="Black"></Picker>
+                      <Image x:Name="lunchPic" Source="lunch.png" HorizontalOptions="Start" VerticalOptions="Center"/>
+
+                    </Grid>
+                    </Frame>
+                </Frame>
+
+
+                <Frame x:Name="selectDateFrame" BorderColor="#FF6505" CornerRadius="23" HasShadow="False">
+                    <Frame BorderColor="White" BackgroundColor="Transparent" Padding="0" HasShadow="False">
+                    <Grid>
+
+                      <Picker x:Name="datePicker" SelectedIndexChanged="dateChange" Title="SELECT DATE" Margin="0"
+                              HorizontalOptions="Fill" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="Black" TitleColor="Black"></Picker>
+                      <Image x:Name="calendarPic" Source="Calendar.png" HorizontalOptions="Start" VerticalOptions="Center"/>
+
+                    </Grid>
+                    </Frame>
+                </Frame>
+
+
+                <!--<Picker x:Name="SubscriptionPicker" Margin="30,0,30,0" SelectedIndexChanged="planChange" Title="Choose a Meal Plan"></Picker>-->
                 <Grid Margin="15,0,15,0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="40" />
@@ -25,7 +65,7 @@
                 <Frame OutlineColor="Black" Padding="0" BackgroundColor="Transparent" Grid.Column="3" CornerRadius="15">
                     <Button x:Name="save1" Text = "Save" VerticalOptions="Center" HorizontalOptions="Center" FontSize="Micro" Grid.Row="0" Grid.Column="3" Clicked="saveUserMeals"/>
                 </Frame>-->
-                    <Picker x:Name="datePicker" Grid.ColumnSpan="2" Margin="15,0,0,0" SelectedIndexChanged="dateChange"/>
+                    <!--<Picker x:Name="datePicker" Grid.ColumnSpan="2" Margin="15,0,0,0" SelectedIndexChanged="dateChange"/>-->
                     <Frame  OutlineColor="Black" Padding="0" BackgroundColor="Transparent" Grid.Column="3" CornerRadius="20">
                         <Button x:Name="saveBttn" ClassId="save1" Text = "Save" VerticalOptions="Center" HorizontalOptions="Center" FontSize="Micro" Grid.Row="0" Grid.Column="3" Clicked="saveUserMeals" BackgroundColor="Transparent" BorderColor="Transparent" TextColor="Black" FontAttributes="Bold"/>
                     </Frame>
@@ -63,7 +103,7 @@
 
                     <!-- End Progress Bar Grid 1-->
                 </Grid>
-                <ProgressBar Progress="0.5" x:Name="weekOneProgress" Margin="10,10,10,10" BackgroundColor="Transparent" HeightRequest="35" ></ProgressBar>
+                <ProgressBar Progress="0" x:Name="weekOneProgress" Margin="10,10,10,10" BackgroundColor="Transparent" HeightRequest="35" ></ProgressBar>
 
                 <CollectionView x:Name="weekOneMenu" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,0,30" BackgroundColor="#f3f2dc">
                     <CollectionView.ItemsLayout>
@@ -180,5 +220,6 @@
                 </StackLayout>
             </StackLayout>
         </StackLayout>
+    </ScrollView>
     </ContentPage.Content>
 </ContentPage>
